fixed footer copyright and date to show on smaller screen

--- a/src/index.css
+++ b/src/index.css
@@ -111,11 +111,16 @@ body {
 }
 
 footer {
+  display:flex;
+  justify-content: center;
   background-color: #3a4454;
   font-size: 1.5em;
-  text-align: center;
   padding: 1em;
   color: silver;
+}
+
+.copyright {
+ padding-bottom:2em;
 }
 
 a:visited {
